Validation workflow for site visit

--- a/bims/templates/site_visit/site_visit_detail.html
+++ b/bims/templates/site_visit/site_visit_detail.html
@@ -67,6 +67,7 @@
                 </form>
             </div>
         {% endif %}
+        <div style="float: right; font-size: 1.2em">{{ object.validation_status | safe }}</div>
         <div class="alert alert-danger" role="alert"
              style="display: none;">
 
