fix download Abiotic data chart

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -708,7 +708,7 @@
                         <div class="card-header-title pull-left d-inbar">
                             Abiotic Data
                         </div>
-                        <button class="ssdd-export btn btn-default pull-right" id="chem-graph-export">
+                        <button class="ssdd-export btn btn-default pull-right" id="chem-graph-export" data-title="Abiotic Data">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
