--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -320,7 +320,7 @@ h6 {
     width: 100%;
     padding-top: 40px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 
