--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -145,7 +145,7 @@
                            aria-haspopup="true" aria-expanded="false">{{ user.first_name }}</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="/profile/">Profile</a>
-                        <a class="dropdown-item" href="/nonvalidated-user-list/">Update Records</a>
+                            <a class="dropdown-item" href="/site-visit/list/?&collectors=%5B{{ user.id }}%5D">Site Visits</a>
                             <div class="dropdown-divider"></div>
                             {% if user.is_staff or user.is_superuser %}
                                 <a class="dropdown-item" href="/upload-taxa/">Upload Taxonomic Data</a>
@@ -154,7 +154,7 @@
                                 <a class="dropdown-item" href="/dashboard-management/">Edit Dashboard</a>
                                 <a class="dropdown-item" href="/taxa-management/">Taxon Management</a>
                                 <a class="dropdown-item" href="/download-request/">Download Requests</a>
-                                <a class="dropdown-item" href="/nonvalidated-list/">Validate Records</a>
+                                <a class="dropdown-item" href="/site-visit/list/?&inReview=True">Validate Records</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
                                 <a class="dropdown-item" href="/cms">Wagtail Admin</a>
