--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -237,8 +237,10 @@
                                 <a href="/site-visit/detail/{{ site_visit.id }}/"
                                    class="btn btn-primary btn-sm btn-action"><i class="fa fa-eye" aria-hidden="true"></i> </a>
                                 {% if user.is_superuser or site_visit.owner == user or site_visit.collector_user == user %}
+                                    {% if not site_visit.ready_for_validation  %}
                                     <a href="/site-visit/update/{{ site_visit.id }}/"
                                        class="btn btn-primary btn-sm btn-action" style="margin-left: 5px;"><i class="fa fa-pencil"></i> </a>
+                                    {% endif %}
                                 {% endif %}
                                 {% if site_visit.owner == user and not site_visit.ready_for_validation and not site_visit.validated %}
                                     <a href="#" onclick="sendEmailValidation({{ site_visit.pk }}, this)"
