add download for Overview and metadata table

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -139,6 +139,11 @@
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
+                        <div class="table-title">Overview
+                            <i data-download-title="Overview"
+                               data-toggle="tooltip" data-placement="left"
+                               class="fa fa-download pull-right download-icon download-table"></i>
+                        </div>
                         <table class="sass-summary table">
                             <tbody>
                             <tr>
@@ -451,6 +456,9 @@
                     <div class="table-container">
                         <div class="table-title">
                             Metadata Table
+                            <i data-download-title=" Metadata Table"
+                               data-toggle="tooltip" data-placement="left"
+                               class="fa fa-download pull-right download-icon download-table"></i>
                         </div>
                         <div class="data-content">
                             <table id="data-source-list" class="table table-hover custom-table metadata-table">
