--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -708,9 +708,25 @@
                         <div class="card-header-title pull-left d-inbar">
                             Abiotic Data
                         </div>
-                        <button class="ssdd-export btn btn-default pull-right" id="chem-graph-export" data-title="Abiotic Data">
-                            <i class="fa fa-download"></i>
-                        </button>
+                        <div class="btn-group pull-right">
+                            <button type="button"
+                                    class="btn btn-default pull-right dropdown-toggle"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false" style="color: black">
+                                <i class="fa fa-download"></i>
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="ssdd-export btn dropdown-item" data-title="Abiotic Data - COND"
+                                   data-chart="COND-chem-chart">Download Conductivity (mS/m)</a>
+                                <a class="ssdd-export btn dropdown-item" data-title="Abiotic Data - TEMP"
+                                   data-chart="TEMP-chem-chart">Download Temperature</a>
+                                <a class="ssdd-export btn dropdown-item" data-title="Abiotic Data - pH"
+                                   data-chart="PH-chem-chart">Download pH</a>
+                                <a class="ssdd-export btn dropdown-item" data-title="Abiotic Data - DO"
+                                   data-chart="DO-chem-chart">Download Oxygen: dissolved (mg/l)
+                                </a>
+                                </div>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="col-12 species-ssdd-chem-bar-chart" id="species-ssdd-chem-bar-chart">
