add duplicate record task

--- a/bims/templates/summary_report.html
+++ b/bims/templates/summary_report.html
@@ -42,6 +42,7 @@
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/utils/download_csv.js" %}"></script>
 
     <script>
 
@@ -119,7 +120,19 @@
                     tbody.append(tr);
                     tbody.append(objectToTable(value, parent + 1, totalColumn));
                 } else {
-                    tr.append(`<td colspan="${totalColumn - (parent+1)}">${numberWithCommas(value)}</td>`);
+                    if(key==='total_duplicate_records'){
+                        tr.append(`<td colspan="" style="border-right: none">${numberWithCommas(value)}</td>`);
+                        tr.append(`<td colspan="3" style="border-left: none">
+                        <div class="download-container">
+                        </div>
+                          <button class="btn btn-info download-duplicate-as-csv" onclick="onDownloadDuplicateCSVClicked(event)">
+                                Download as CSV
+                            </button>
+                        </td>`)
+                    }
+                    else{
+                        tr.append(`<td colspan="${totalColumn - (parent+1)}">${numberWithCommas(value)}</td>`);
+                    }
                     tbody.append(tr);
                 }
             })
@@ -194,6 +207,16 @@
             }
         });
 
+        function onDownloadDuplicateCSVClicked(e) {
+            let downloadButton = $(e.target);
+            {#let csv_name = getCsvName('Chem data', downloadButton.data('identifier'));#}
+            {#let currentUrl = window.location.href;#}
+            {#let queryString = currentUrl ? currentUrl.split('?')[1] : window.location.search.slice(1);#}
+            let url = '/api/duplicate-records/download/';
+            downloadButton.html("Processing...");
+            downloadButton.prop("disabled", true);
+            downloadCSV(url, downloadButton);
+        }
     </script>
 
 {% endblock %}
