--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -213,9 +213,10 @@
                     </thead>
                     <tbody>
                     {% for site_visit in survey_list %}
+                        {% with site_visit_sass=site_visit.sass_site_visit %}
                         <tr>
-                            {{ site_visit.is_sass_data }}
                             <td>{% if site_visit.site.site_code %}{{ site_visit.site.site_code }}{% else %}-{% endif %}<br>
+                                {% if site_visit_sass %}<span class="badge badge-danger">SASS</span>{% endif %}
                                 {{ site_visit.validation_status | safe }}
                             </td>
                             <td>
@@ -238,11 +239,11 @@
                             </td>
                             <td>{{ site_visit.total }}</td>
                             <td>
-                                <a href="/site-visit/detail/{{ site_visit.id }}/"
+                                <a href="{% if site_visit_sass %}/sass/view/{{ site_visit.sass_site_visit.id }}/{% else %}/site-visit/detail/{{ site_visit.id }}/{% endif %}"
                                    class="btn btn-primary btn-sm btn-action"><i class="fa fa-eye" aria-hidden="true"></i> </a>
                                 {% if user.is_superuser or site_visit.owner == user or site_visit.collector_user == user %}
                                     {% if not site_visit.ready_for_validation  %}
-                                    <a href="/site-visit/update/{{ site_visit.id }}/"
+                                    <a href="{% if site_visit_sass %}/sass/update/{{ site_visit.sass_site_visit.id }}/{% else %}/site-visit/update/{{ site_visit.id }}/{% endif %}"
                                        class="btn btn-primary btn-sm btn-action" style="margin-left: 5px;"><i class="fa fa-pencil"></i> </a>
                                     {% endif %}
                                 {% endif %}
@@ -266,6 +267,7 @@
                                 {% endif %}
                             </td>
                         </tr>
+                        {% endwith %}
                     {% endfor %}
                     </tbody>
                 </table>
