Remove extra blocks in Ecological category

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -374,15 +374,15 @@
                                title="Download charts as svg which you can drag and drop to excel or word"
                                class="fa fa-download pull-right download-icon" ></i>
                                 <div class="dropdown-menu">
-                                        <a class="download-chart-new btn dropdown-item" data-download-title="SASS charts - SASS Scores"
+                                        <a class="download-chart-new btn dropdown-item" data-download-title="SASS Scores"
                                            data-download-chart="SASS-scores" >
                                             Download SASS Scores
                                         </a>
-                                         <a class="download-chart-new btn dropdown-item" data-download-title="SASS charts - Number of Taxa"
+                                         <a class="download-chart-new btn dropdown-item" data-download-title="Number of Taxa"
                                            data-download-chart="number-of-taxa" >
                                             Download Number of Taxa
                                         </a>
-                                        <a class="download-chart-new btn dropdown-item" data-download-title="SASS charts - ASPT"
+                                        <a class="download-chart-new btn dropdown-item" data-download-title="ASPT"
                                            data-download-chart="ASPT" >
                                             Download ASPT
                                         </a>
