--- a/bims/templates/site_visit/site_visit_update.html
+++ b/bims/templates/site_visit/site_visit_update.html
@@ -373,6 +373,9 @@
                                 {% endif %}
                             </div>
                         </th>
+                        {% if request.user.is_superuser or request.user.is_staff %}
+                            <th style="width: 10px;"></th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody class="taxon-table-body">
@@ -383,7 +386,7 @@
                         </td>
                     </tr>
                     {% for collection_record in collection_records %}
-                        <tr>
+                        <tr id="{{ collection_record.id }}">
                             <td scope="row"
                                 class="taxon-name">
                                 {{ collection_record.taxonomy.canonical_name }}
@@ -407,6 +410,12 @@
                                        value={% if collection_record.abundance_number %}{{ collection_record.abundance_number }}{% else %}0{% endif %}
                                        placeholder="0">
                             </td>
+                            {% if request.user.is_superuser or request.user.is_staff %}
+                            <td>
+                                <button type="button" class="btn btn-danger" onclick="deleteRecord('{{ collection_record.id }}')"><i class="fa fa-trash"></i>
+                                </button>
+                            </td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     {% for taxon in taxa %}
