--- a/bims/templates/summary_report.html
+++ b/bims/templates/summary_report.html
@@ -53,10 +53,11 @@
                 'title': 'General Data Report',
                 'url': '/api/summary-general-report/'
             },
-            {
-                'title': BACKGROUND_PROCESS,
-                'url': '/api/v1/celery-inspect/active/'
-            },
+            // Update this
+            // {
+            //    'title': BACKGROUND_PROCESS,
+            //    'url': '/api/v1/celery-inspect/active/'
+            // },
             {
                 'title': 'Location Context Report',
                 'url': '/api/location-context-report/'
